--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@fastify/autoload": "~5.7.1",
+    "@fastify/sensible": "~5.2.0",
     "@swc/helpers": "~0.5.2",
     "axios": "^1.0.0",
     "express": "~4.18.1",
+    "fastify": "~4.13.0",
+    "fastify-plugin": "~4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.11.2",
