--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fastify/autoload": "~5.7.1",
     "@fastify/sensible": "~5.2.0",
     "@swc/helpers": "~0.5.2",
+    "aws-amplify": "^5.3.11",
     "axios": "^1.0.0",
     "express": "~4.18.1",
     "fastify": "~4.13.0",
